# sysProgCpp

./: README.md
lab1/: .gitignore  CMakeLists.txt  Makefile  database.cpp  database.h  employee.cpp  taxi.cpp  taxi.h  taxiManagementSystem  tests.cpp  userInterface.cpp
lab1/include/: database.h  employee.h  taxi.h
lab1/src/: userInterface.cpp
lab4/: Makefile  main.c  main2.c  out.txt
lab5/: Makefile  counter_read  main.c  userSpace.c
qt_lab3/: .gitignore  CMakeLists.txt  database.cpp  database.h  employee.cpp  employee.h  mainwindow.cpp  mainwindow.h  taxi.cpp  taxi.h
